# mcp-server-imessage

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/prompts/: build.prompt.md
.github/workflows/: main.yml
src/mcp_server_imessage/: AddressBook.py  SnowflakeComponents.py  __main__.py  iMessage.py  server.py
src/mcp_server_imessage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mcp_server_imessage/errors/: __init__.py
src/mcp_server_imessage/models/: __init__.py  chat.py  handle.py  message.py
tests/: conftest.py  test_addressbook.py  test_imessage.py  test_server.py  test_snowflake_decoder.py
